Fix text overflow
The name of the project won't overflow if its height is bigger than the parent block height

--- a/src/style/navigation.css
+++ b/src/style/navigation.css
@@ -169,7 +169,6 @@ nav
 	transform: scale(1.04);
 }
 
-
 .cancel-project:active, .submit-project:active
 {
 	opacity: 0.8;
@@ -180,4 +179,16 @@ nav
 	outline: none;
 	border: 2px solid black;
 	border-radius: 3px;
+}
+
+#remove-project-icon:hover
+{
+	cursor: pointer;
+	transform: scale(1.30);
+}
+
+
+#remove-project-icon:active
+{
+	opacity: 0.5;
 }
